# birthday-greetings

./: CMakeLists.txt  README.md  main.cpp
PostgreSQL13/include/: libpq-fe.h
src/: BirthdayService.cpp  BirthdayService.h  CMakeLists.txt  DataBaseEmployeesRepository.cpp  DataBaseEmployeesRepository.h  Employee.cpp  Employee.h  EmployeesRepository.h  GreetingsSender.h  MailSender.cpp  MailSender.h  SmtpMessage.cpp  SmtpMessage.h  XDate.cpp  XDate.h
test/: AcceptanceTest.cpp  BirthdayServiceTest.cpp  CMakeLists.txt  DataBaseEmployeeRepositoryTest.cpp  EmployeeTest.cpp  EmployeesRepositorySub.cpp  EmployeesRepositorySub.h  XDateTest.cpp
